--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"  },
+    "lint": "next lint"
+  },
   "dependencies": {
+    "@react-email/components": "^0.3.1",
+    "@react-email/render": "^1.1.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
@@ -17,7 +20,8 @@
     "mongoose": "^8.16.3",
     "next": "^14.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
