--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,21 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Runtime/build
+.next
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Env files
+.env
+.env.*.local
+
+# Output from `next export`
+out/
+
+# Editor/IDE
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,4 +31,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
+
+# OS metadata
+Thumbs.db
